--- a/website/docs/usage/troubleshooting.jade
+++ b/website/docs/usage/troubleshooting.jade
@@ -94,8 +94,9 @@ p
     |  sign that the package is not installed in the current environment.
 
 +infobox("Solutions")
-    |  Run #[code pip list] or #[code pip freeze] to check which model packages
-    |  you have installed, and install the
+    |  Try #[sudo python -m spacy download en] rather than #[python -m spacy download en].
+    |  Otherwise, run #[code pip list] or #[code pip freeze] to check which
+    |  model packages you have installed, and install the
     |  #[+a("/docs/usage/models#available") correct models] if necessary. If you're
     |  importing a model manually at the top of a file, make sure to use the name
     |  of the package, not the shortcut link you've created.
